# rust-server

./: .env.sample  Cargo.toml  README.md  config.rs  mod.rs
.github/workflows/: release.yml
src/: config.rs  main.rs
src/http/: error.rs  extractor.rs  mod.rs  users.rs
