[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.6.18", features = ["tower-log"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
redis = { version = "0.23.0" }

# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = { version = "4.3.3", features = ["derive", "env"] }

serde = { version = "1.0.164", features = ["derive"] }

# State of the art password hashing.
argon2 = "0.5.0"

jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"

time = "0.3.22"

uuid = { version = "1.3.4", features = ["serde"] }


# axum builds on the types in Tower
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace"] }


# Utility Crates
anyhow = "1.0.71"
dotenv = "0.15.0"
env_logger = "0.10.0"
thiserror = "1.0.40"
log = "0.4.19"
async-trait = "0.1.68"
tower-cookies = "0.9.0"
rand = "0.8.5"
